--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,16 +1,94 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
+<web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">   
+
+       <!--
+    <filter>
+        <filter-name>CorsFilter</filter-name>
+        <filter-class>org.apache.catalina.filters.CorsFilter</filter-class>
+    </filter>
+    <filter-mapping>
+      <filter-name>CorsFilter</filter-name>
+      <url-pattern>/rest/*</url-pattern>
+    </filter-mapping>  
+ 
+<filter>
+  <filter-name>CorsFilter</filter-name>
+  <filter-class>org.apache.catalina.filters.CorsFilter</filter-class>
+</filter>
+<filter-mapping>
+  <filter-name>CorsFilter</filter-name>
+  <url-pattern>/rest/*</url-pattern>
+</filter-mapping>    
+    -->  
+    
+        
     <servlet>
-        <servlet-name>Controller</servlet-name>
-        <servlet-class>com.djunior.eel418trabalho2.Controller</servlet-class>
+        <servlet-name>com.djunior.eel418trabalho2.ApplicationConfig</servlet-name>
+        <multipart-config>
+            <location>/</location>
+            <max-file-size>    35000000000</max-file-size>
+            <max-request-size>218018841000</max-request-size>
+            <file-size-threshold>350000000</file-size-threshold>
+        </multipart-config>
     </servlet>
     <servlet-mapping>
-        <servlet-name>Controller</servlet-name>
-        <url-pattern>/controller</url-pattern>
+        <servlet-name>com.djunior.eel418trabalho2.ApplicationConfig</servlet-name>
+        <url-pattern>/rest/*</url-pattern>
     </servlet-mapping>
+    
     <session-config>
         <session-timeout>
             30
         </session-timeout>
     </session-config>
+    
+    <welcome-file-list>
+        <welcome-file>protegido/index.html</welcome-file>
+    </welcome-file-list>
+    <error-page>
+        <error-code>401</error-code>
+        <location>/error.jsp</location>
+    </error-page>
+    <security-constraint>
+        <display-name>Example Security Constraint - part 1</display-name>
+        <web-resource-collection>
+            <web-resource-name>Protected Area - Allow methods</web-resource-name>
+            <!-- Define the context-relative URL(s) to be protected -->
+            <url-pattern>/protegido/*</url-pattern>
+            <!-- If you list http methods, only those methods are protected so -->
+            <!-- the constraint below ensures all other methods are denied     -->
+            <http-method>DELETE</http-method>
+            <http-method>GET</http-method>
+            <http-method>POST</http-method>
+            <http-method>PUT</http-method>
+        </web-resource-collection>
+        <auth-constraint>
+            <description/>
+            <role-name>admin</role-name>
+        </auth-constraint>
+        <user-data-constraint>
+            <description/>
+            <transport-guarantee>CONFIDENTIAL</transport-guarantee>
+        </user-data-constraint>
+    </security-constraint>
+    <servlet>
+        <servlet-name>Logout</servlet-name>
+        <servlet-class>com.djunior.eel418trabalho2.Logout</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Logout</servlet-name>
+        <url-pattern>/logout</url-pattern>
+    </servlet-mapping>
+    <login-config>
+        <auth-method>FORM</auth-method>
+        <realm-name>eel418-trabalho-2</realm-name>
+        <form-login-config>
+            <form-login-page>/login.html</form-login-page>
+            <form-error-page>/error.jsp</form-error-page>
+        </form-login-config>
+    </login-config>
+    <security-role>
+        <description/>
+        <role-name>admin</role-name>
+    </security-role>
 </web-app>
